# kode

./: .gitignore  .gitmodules  ADOPTME.md  CMakeLists.txt  Makefile.am  Messages.sh  README  README.md  automakefile.cpp  automakefile.h  class.cpp  class.h  code.cpp  code.h  enum.cpp  enum.h  file.cpp  file.h  function.cpp  function.h  kode-mm.files  kode-mm.includes  kode.cpp  kode.h  kode.pro  kodemain.cpp  kxml_compiler.cpp  license.cpp  license.h  membervariable.cpp  membervariable.h  printer.cpp  printer.h  statemachine.cpp  statemachine.h  style.cpp  style.h  typedef.cpp  typedef.h  variable.cpp  (+1 more)
common/: CMakeLists.txt  Makefile.am  common.pri  common.pro  fileprovider.cpp  fileprovider.h  kode_export.h  messagehandler.cpp  messagehandler.h  nsmanager.cpp  nsmanager.h  parsercontext.cpp  parsercontext.h  qname.cpp  qname.h
kwsdl/: CMakeLists.txt  Makefile.am  TODO  binding.cpp  binding.h  compiler.cpp  compiler.h  converter.cpp  converter.h  converter_attribute.cpp  converter_clientstub.cpp  converter_complextype.cpp  converter_element.cpp  converter_serverstub.cpp  converter_simpletype.cpp  converter_transport.cpp  converter_utils.cpp  creator.cpp  creator.h  kwsdl_compiler.desktop  kwsdlcfg.xsd  main.cpp  message.cpp  message.h  namemapper.cpp  namemapper.h  parser.cpp  parser.h  port.cpp  port.h  service.cpp  service.h  settings.cpp  settings.h  typemap.cpp  typemap.h  typemapper.cpp  typemapper.h  wsdl.cpp  wsdl.h
kwsdl/common/: Makefile.am  fileprovider.cpp  fileprovider.h  nsmanager.cpp  nsmanager.h  parsercontext.h  qname.cpp  qname.h
kwsdl/doc/: CMakeLists.txt  Makefile.am
kwsdl/kung/: CMakeLists.txt  Makefile.am  TODO  binaryinputfield.cpp  binaryinputfield.h  boolinputfield.cpp  boolinputfield.h  complexbaseinputfield.cpp  complexbaseinputfield.h  conversationmanager.h  dateinputfield.cpp  dateinputfield.h  dispatcher.cpp  dispatcher.h  doubleinputfield.cpp  doubleinputfield.h  enuminputfield.cpp  enuminputfield.h  generalconversationmanager.cpp  generalconversationmanager.h  inputdialog.cpp  inputdialog.h  inputfield.cpp  inputfield.h  inputfieldfactory.cpp  inputfieldfactory.h  integerinputfield.cpp  integerinputfield.h  listinputfield.cpp  listinputfield.h  loader.cpp  loader.h  main.cpp  outputdialog.cpp  outputdialog.h  pageinputfield.cpp  pageinputfield.h  simplebaseinputfield.cpp  simplebaseinputfield.h  stringinputfield.cpp  (+7 more)
kwsdl/schema/: Makefile.am  attribute.cpp  attribute.h  attributegroup.cpp  complextype.cpp  complextype.h  element.cpp  element.h  fileprovider.cpp  fileprovider.h  main.cpp  parser.cpp  parser.h  qualifiedname.cpp  qualifiedname.h  simpletype.cpp  simpletype.h  types.cpp  types.h  typestable.cpp  typestable.h  xmlelement.h  xsdtype.cpp  xsdtype.h
kwsdl/wscl/: CMakeLists.txt  Makefile.am  conversation.cpp  conversation.h  documents.cpp  documents.h  interaction.cpp  interaction.h  parser.cpp  parser.h  transition.cpp  transition.h
kwsdl/wsdl/: CMakeLists.txt  Makefile.am  abstractbinding.h  binding.cpp  binding.h  bindingoperation.cpp  bindingoperation.h  definitions.cpp  definitions.h  element.cpp  element.h  fault.cpp  fault.h  import.cpp  import.h  message.cpp  message.h  operation.cpp  operation.h  param.cpp  param.h  part.cpp  part.h  port.cpp  port.h  porttype.cpp  porttype.h  service.cpp  service.h  soapbinding.cpp  soapbinding.h  type.cpp  type.h  wsdl.cpp  wsdl.h
kxforms/: CMakeLists.txt  Makefile.am  Messages.sh  TODO  dispatcher.cpp  dispatcher.h  example.kxform  form.cpp  form.h  formcreator.cpp  formcreator.h  formgui.cpp  formgui.h  guielement.cpp  guielement.h  guihandler.cpp  guihandler.h  guihandlerdialogs.cpp  guihandlerdialogs.h  guihandlerflat.cpp  guihandlerflat.h  hints.cpp  hints.h  input.cpp  input.h  kresult.cpp  kresult.h  kxforms.desktop  kxforms.kcfg  kxforms.pro  kxformsui.rc  layout.cpp  layout.h  list.cpp  list.h  listmodel.cpp  listmodel.h  listproxymodel.cpp  listproxymodel.h  main.cpp  (+26 more)
kxforms/doc/: Makefile  commonandcore.tex  guielements.tex  hints.tex  introduction.tex  kxforms.tex  layoutelements.tex  propertyelements.tex  specialelements.tex
kxforms/editor/: appearanceaction.cpp  appearanceaction.h  changelabelaction.cpp  changelabelaction.h  editor.cpp  editor.h  editoraction.cpp  editoraction.h  editorwidget.cpp  editorwidget.h  globalsettingsdlg.cpp  globalsettingsdlg.h  groupaction.cpp  groupaction.h  inputtypeaction.cpp  inputtypeaction.h  layoutstyleaction.cpp  layoutstyleaction.h  listaction.cpp  listaction.h  positionaction.cpp  positionaction.h  readonlyaction.cpp  readonlyaction.h
kxforms/tests/: CMakeLists.txt  Makefile.am  features.kxform  features.kxform.check  features.ugh  features.xml  features.xml.orig  features.xsd  formcreatortest.cpp  formcreatortest.h  formcreatortest.xsd  (+14 more)
kxml_compiler/: CMakeLists.txt  Makefile.am  README  TODO  classdescription.cpp  classdescription.h  creator.cpp  creator.h  kschema.pro  kxml_compiler.cpp  kxml_compiler.pro  namer.cpp  namer.h  parser.cpp  parser.h  parsercreatorcustom.cpp  parsercreatorcustom.h  parsercreatordom.cpp  parsercreatordom.h  parserrelaxng.cpp  parserrelaxng.h  parserxml.cpp  parserxml.h  parserxsd.cpp  parserxsd.h  schema.cpp  schema.h  writercreator.cpp  writercreator.h
libkode/: CMakeLists.txt  Makefile.am  automakefile.cpp  automakefile.h  class.cpp  class.h  code.cpp  code.h  enum.cpp  enum.h  file.cpp  file.h  function.cpp  function.h  libkode.pri  libkode.pro  license.cpp  license.h  membervariable.cpp  membervariable.h  namer.cpp  namer.h  printer.cpp  printer.h  statemachine.cpp  statemachine.h  style.cpp  style.h  typedef.cpp  typedef.h  variable.cpp  variable.h
schema/: CMakeLists.txt  Makefile.am  annotation.cpp  annotation.h  attribute.cpp  attribute.h  attributegroup.cpp  attributegroup.h  complextype.cpp  complextype.h  compositor.cpp  compositor.h  element.cpp  element.h  main.cpp  parser.cpp  parser.h  schema.pri  schema.pro  schematest.cpp  schematest.pro  simpletype.cpp  simpletype.h  types.cpp  types.h  typestable.cpp  typestable.h  xmlelement.cpp  xmlelement.h  xsdtype.cpp  xsdtype.h
(+123 files in other folders)
